--- a/Documentation/DCS.html
+++ b/Documentation/DCS.html
@@ -6123,6 +6123,12 @@ First value indicates if at least one of the unit's radar(s) is on.</p>
 </td>
           </tr>
           <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(country.id).BOLIVIA">country.id.BOLIVIA</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+
+</td>
+          </tr>
+          <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(country.id).BRAZIL">country.id.BRAZIL</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 
@@ -6195,6 +6201,12 @@ First value indicates if at least one of the unit's radar(s) is on.</p>
 </td>
           </tr>
           <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(country.id).ECUADOR">country.id.ECUADOR</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+
+</td>
+          </tr>
+          <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(country.id).EGYPT">country.id.EGYPT</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 
@@ -6232,6 +6244,12 @@ First value indicates if at least one of the unit's radar(s) is on.</p>
           </tr>
           <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(country.id).GERMANY">country.id.GERMANY</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+
+</td>
+          </tr>
+          <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(country.id).GHANA">country.id.GHANA</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 
 </td>
@@ -6357,6 +6375,12 @@ First value indicates if at least one of the unit's radar(s) is on.</p>
 </td>
           </tr>
           <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(country.id).NIGERIA">country.id.NIGERIA</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+
+</td>
+          </tr>
+          <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(country.id).NORTH_KOREA">country.id.NORTH_KOREA</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 
@@ -6376,6 +6400,12 @@ First value indicates if at least one of the unit's radar(s) is on.</p>
           </tr>
           <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(country.id).PAKISTAN">country.id.PAKISTAN</a></p></td>
+            <td class="summary w3-half w3-container" style="word-wrap: break-word">
+
+</td>
+          </tr>
+          <tr class="w3-border">
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(country.id).PERU">country.id.PERU</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 
 </td>
