--- a/Documentation/Ops.Airboss.html
+++ b/Documentation/Ops.Airboss.html
@@ -40149,7 +40149,7 @@ When moose is loading dynamically (for moose class development), tracing is swit
 
 
     
-<p> Set time stamp.</p>
+<p> Set new time stamp.</p>
 
 </div>
 
