--- a/Documentation/Ops.PlayerTask.html
+++ b/Documentation/Ops.PlayerTask.html
@@ -3621,7 +3621,7 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
 </td>
           </tr>
           <tr class="w3-border">
-            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(PLAYERTASKCONTROLLER).AddPlayerTaskToQueue">PLAYERTASKCONTROLLER:AddPlayerTaskToQueue(PlayerTask)</a></p></td>
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(PLAYERTASKCONTROLLER).AddPlayerTaskToQueue">PLAYERTASKCONTROLLER:AddPlayerTaskToQueue(PlayerTask, Silent)</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 <p>[User] Add a PLAYERTASK object to the list of (open) tasks</p>
 </td>
@@ -14693,7 +14693,7 @@ When moose is loading dynamically (for moose class development), tracing is swit
         <div class="w3-card-2 w3-padding-small w3-margin-top">
 
 <div class="w3-theme-l2">
-<h2><a id="#(PLAYERTASKCONTROLLER).AddPlayerTaskToQueue" ><strong>PLAYERTASKCONTROLLER:AddPlayerTaskToQueue(PlayerTask)</strong></a></h2>
+<h2><a id="#(PLAYERTASKCONTROLLER).AddPlayerTaskToQueue" ><strong>PLAYERTASKCONTROLLER:AddPlayerTaskToQueue(PlayerTask, Silent)</strong></a></h2>
 </div>
     
 <p>[User] Add a PLAYERTASK object to the list of (open) tasks</p>
@@ -14704,7 +14704,7 @@ When moose is loading dynamically (for moose class development), tracing is swit
    <div class="w3-margin-left">
 <p>PLAYERTASKCONTROLLER</p>
 </div>
-    <h2><strong>Parameter:</strong></h2>
+    <h2><strong>Parameters:</strong></h2>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
@@ -14714,6 +14714,19 @@ When moose is loading dynamically (for moose class development), tracing is swit
           </div>
           <div class="w3-half">
               <p></p>
+          </div>
+        </div>
+        <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
+          <div class="w3-half">
+            <p>
+                #boolean
+            <strong><strong>Silent</strong></strong>
+            </p>
+          </div>
+          <div class="w3-half">
+              
+<p>If true, make no "has new task" announcement</p>
+
           </div>
         </div>
     <h2><strong>Return value:</strong></h2>
