MOOSE generated documentation [skip ci]

--- a/Documentation/Ops.AWACS.html
+++ b/Documentation/Ops.AWACS.html
@@ -1871,11 +1871,7 @@
 
 <hr/>
 
-<h2>AWACS</h2>
-
-<ul>
-    <li>MOOSE AI AWACS Operations using text-to-speech.</li>
-</ul>
+<p><strong>AWACS</strong> - MOOSE AI AWACS Operations using text-to-speech.</p>
 
 <hr/>
 
