MOOSE generated documentation [skip ci]

--- a/Documentation/Ops.Brigade.html
+++ b/Documentation/Ops.Brigade.html
@@ -2243,7 +2243,7 @@
           <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(BRIGADE).GetAssetsOnMission">BRIGADE:GetAssetsOnMission(MissionTypes)</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
-<p>Count assets on mission.</p>
+<p>Get assets on mission.</p>
 </td>
           </tr>
           <tr class="w3-border">
@@ -7741,7 +7741,7 @@ The assets loaded back into the mission will be considered for AUFTRAG type miss
 <h2><a id="#(BRIGADE).GetAssetsOnMission" ><strong>BRIGADE:GetAssetsOnMission(MissionTypes)</strong></a></h2>
 </div>
     
-<p>Count assets on mission.</p>
+<p>Get assets on mission.</p>
 
 <div id= "#Functions##GetAssetsOnMission" class="w3-show w3-white">
   <div class="w3-container w3-white" id="functiontype">
