--- a/Documentation/Ops.Fleet.html
+++ b/Documentation/Ops.Fleet.html
@@ -2247,7 +2247,7 @@ myFleet:AddFlotilla(FlotillaPerry)
           <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(FLEET).GetAssetsOnMission">FLEET:GetAssetsOnMission(MissionTypes)</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
-<p>Count assets on mission.</p>
+<p>Get assets on mission.</p>
 </td>
           </tr>
           <tr class="w3-border">
@@ -7601,7 +7601,7 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
 <h2><a id="#(FLEET).GetAssetsOnMission" ><strong>FLEET:GetAssetsOnMission(MissionTypes)</strong></a></h2>
 </div>
     
-<p>Count assets on mission.</p>
+<p>Get assets on mission.</p>
 
 <div id= "#Functions##GetAssetsOnMission" class="w3-show w3-white">
   <div class="w3-container w3-white" id="functiontype">
