--- a/Documentation/Ops.Airwing.html
+++ b/Documentation/Ops.Airwing.html
@@ -2616,7 +2616,7 @@ started.</p>
           <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(AIRWING).GetAssetsOnMission">AIRWING:GetAssetsOnMission(MissionTypes)</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
-<p>Count assets on mission.</p>
+<p>Get assets on mission.</p>
 </td>
           </tr>
           <tr class="w3-border">
@@ -10489,7 +10489,7 @@ Spawning on runways is not supported.</p>
 <h2><a id="#(AIRWING).GetAssetsOnMission" ><strong>AIRWING:GetAssetsOnMission(MissionTypes)</strong></a></h2>
 </div>
     
-<p>Count assets on mission.</p>
+<p>Get assets on mission.</p>
 
 <div id= "#Functions##GetAssetsOnMission" class="w3-show w3-white">
   <div class="w3-container w3-white" id="functiontype">
