--- a/Documentation/Ops.Legion.html
+++ b/Documentation/Ops.Legion.html
@@ -2044,7 +2044,7 @@
           <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(LEGION).GetAssetsOnMission">LEGION:GetAssetsOnMission(MissionTypes)</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
-<p>Count assets on mission.</p>
+<p>Get assets on mission.</p>
 </td>
           </tr>
           <tr class="w3-border">
@@ -6380,7 +6380,7 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
 <h2><a id="#(LEGION).GetAssetsOnMission" ><strong>LEGION:GetAssetsOnMission(MissionTypes)</strong></a></h2>
 </div>
     
-<p>Count assets on mission.</p>
+<p>Get assets on mission.</p>
 
 <div id= "#Functions##GetAssetsOnMission" class="w3-show w3-white">
   <div class="w3-container w3-white" id="functiontype">
