--- a/Documentation/Ops.ArmyGroup.html
+++ b/Documentation/Ops.ArmyGroup.html
@@ -2855,12 +2855,6 @@
 </td>
           </tr>
           <tr class="w3-border">
-            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(ARMYGROUP).EPLRS">ARMYGROUP.EPLRS</a></p></td>
-            <td class="summary w3-half w3-container" style="word-wrap: break-word">
-
-</td>
-          </tr>
-          <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(ARMYGROUP).ElementStatus">ARMYGROUP.ElementStatus</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 
@@ -17689,7 +17683,7 @@ Optionally, you can calculate the current max weight possible, which accounts fo
           </div>
           <div class="w3-half">
               
-<p>The position to which we check the LoS.</p>
+<p>The position to which we check the LoS. Can also be a DCS#Vec3.</p>
 
           </div>
         </div>
