--- a/Documentation/Ops.NavyGroup.html
+++ b/Documentation/Ops.NavyGroup.html
@@ -2848,12 +2848,6 @@
 </td>
           </tr>
           <tr class="w3-border">
-            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(NAVYGROUP).EPLRS">NAVYGROUP.EPLRS</a></p></td>
-            <td class="summary w3-half w3-container" style="word-wrap: break-word">
-
-</td>
-          </tr>
-          <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(NAVYGROUP).ElementStatus">NAVYGROUP.ElementStatus</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 
@@ -17191,7 +17185,7 @@ Optionally, you can calculate the current max weight possible, which accounts fo
           </div>
           <div class="w3-half">
               
-<p>The position to which we check the LoS.</p>
+<p>The position to which we check the LoS. Can also be a DCS#Vec3.</p>
 
           </div>
         </div>
