MOOSE generated documentation [skip ci]

--- a/Documentation/Ops.Chief.html
+++ b/Documentation/Ops.Chief.html
@@ -2108,6 +2108,7 @@ myChief:AddStrategicZone(myOpsZone, nil , 2, ResourceOccupied, ResourceEmpty)
     <li><code>AUFTRAG.Type.ARTY</code></li>
     <li><code>AUFTRAG.Type.PATROLZONE</code></li>
     <li><code>AUFTRAG.Type.ONGUARD</code></li>
+    <li><code>AUFTRAG.Type.CAPTUREZONE</code></li>
     <li><code>AUFTRAG.Type.RECON</code></li>
     <li><code>AUFTRAG.Type.AMMOSUPPLY</code></li>
     <li><code>AUFTRAG.Type.BOMBING</code></li>
