--- a/Documentation/DCS.html
+++ b/Documentation/DCS.html
@@ -5501,13 +5501,13 @@ First value indicates if at least one of the unit's radar(s) is on.</p>
           <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(Unit.RefuelingSystem).BOOM_AND_RECEPTACLE">Unit.RefuelingSystem.BOOM_AND_RECEPTACLE</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
-
+<p>Tanker with a boom.</p>
 </td>
           </tr>
           <tr class="w3-border">
             <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(Unit.RefuelingSystem).PROBE_AND_DROGUE">Unit.RefuelingSystem.PROBE_AND_DROGUE</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
-
+<p>Tanker with a probe.</p>
 </td>
           </tr>
         </table>
