MOOSE generated documentation [skip ci]

--- a/Documentation/Ops.Auftrag.html
+++ b/Documentation/Ops.Auftrag.html
@@ -12527,7 +12527,7 @@ This determines the payload and the DCS mission task which are used when the air
           </div>
           <div class="w3-half">
               
-<p>(Optional) Table of target types. Default <code>{"Helicopters", "Ground Units", "Light armed ships"}</code>.</p>
+<p>(Optional) Table of target types. Default <code>{"Air"}</code>.</p>
 
           </div>
         </div>
