MOOSE generated documentation [skip ci]

--- a/Documentation/Wrapper.Airbase.html
+++ b/Documentation/Wrapper.Airbase.html
@@ -2290,7 +2290,7 @@ is implemented in the AIRBASE class as <a href="##(AIRBASE).GetName">AIRBASE.Get
 <ul>
     <li>AIRBASE.PersianGulf.Abu_Dhabi_International_Airport</li>
     <li>AIRBASE.PersianGulf.Abu_Musa_Island_Airport</li>
-    <li>AIRBASE.PersianGulf.Al-Bateen_Airport</li>
+    <li>AIRBASE.PersianGulf.Al_Bateen_Airport</li>
     <li>AIRBASE.PersianGulf.Al_Ain_International_Airport</li>
     <li>AIRBASE.PersianGulf.Al_Dhafra_AB</li>
     <li>AIRBASE.PersianGulf.Al_Maktoum_Intl</li>
@@ -2309,7 +2309,7 @@ is implemented in the AIRBASE class as <a href="##(AIRBASE).GetName">AIRBASE.Get
     <li>AIRBASE.PersianGulf.Lavan_Island_Airport</li>
     <li>AIRBASE.PersianGulf.Liwa_Airbase</li>
     <li>AIRBASE.PersianGulf.Qeshm_Island</li>
-    <li>AIRBASE.PersianGulf.Ras_Al_Khaimah_International_Airport</li>
+    <li>AIRBASE.PersianGulf.Ras_Al_Khaimah</li>
     <li>AIRBASE.PersianGulf.Sas_Al_Nakheel_Airport</li>
     <li>AIRBASE.PersianGulf.Sharjah_Intl</li>
     <li>AIRBASE.PersianGulf.Shiraz_International_Airport</li>
@@ -4337,7 +4337,7 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
 <ul>
     <li>AIRBASE.PersianGulf.Abu_Dhabi_International_Airport</li>
     <li>AIRBASE.PersianGulf.Abu_Musa_Island_Airport</li>
-    <li>AIRBASE.PersianGulf.Al-Bateen_Airport</li>
+    <li>AIRBASE.PersianGulf.Al_Bateen_Airport</li>
     <li>AIRBASE.PersianGulf.Al_Ain_International_Airport</li>
     <li>AIRBASE.PersianGulf.Al_Dhafra_AB</li>
     <li>AIRBASE.PersianGulf.Al_Maktoum_Intl</li>
@@ -4356,7 +4356,7 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
     <li>AIRBASE.PersianGulf.Lavan_Island_Airport</li>
     <li>AIRBASE.PersianGulf.Liwa_Airbase</li>
     <li>AIRBASE.PersianGulf.Qeshm_Island</li>
-    <li>AIRBASE.PersianGulf.Ras_Al_Khaimah_International_Airport</li>
+    <li>AIRBASE.PersianGulf.Ras_Al_Khaimah</li>
     <li>AIRBASE.PersianGulf.Sas_Al_Nakheel_Airport</li>
     <li>AIRBASE.PersianGulf.Sharjah_Intl</li>
     <li>AIRBASE.PersianGulf.Shiraz_International_Airport</li>
@@ -6980,7 +6980,7 @@ Note that this DOES NOT remove the airbase from the list. It just makes it unres
 <ul>
     <li>AIRBASE.PersianGulf.Abu_Dhabi_International_Airport</li>
     <li>AIRBASE.PersianGulf.Abu_Musa_Island_Airport</li>
-    <li>AIRBASE.PersianGulf.Al-Bateen_Airport</li>
+    <li>AIRBASE.PersianGulf.Al_Bateen_Airport</li>
     <li>AIRBASE.PersianGulf.Al_Ain_International_Airport</li>
     <li>AIRBASE.PersianGulf.Al_Dhafra_AB</li>
     <li>AIRBASE.PersianGulf.Al_Maktoum_Intl</li>
@@ -6999,7 +6999,7 @@ Note that this DOES NOT remove the airbase from the list. It just makes it unres
     <li>AIRBASE.PersianGulf.Lavan_Island_Airport</li>
     <li>AIRBASE.PersianGulf.Liwa_Airbase</li>
     <li>AIRBASE.PersianGulf.Qeshm_Island</li>
-    <li>AIRBASE.PersianGulf.Ras_Al_Khaimah_International_Airport</li>
+    <li>AIRBASE.PersianGulf.Ras_Al_Khaimah</li>
     <li>AIRBASE.PersianGulf.Sas_Al_Nakheel_Airport</li>
     <li>AIRBASE.PersianGulf.Sharjah_Intl</li>
     <li>AIRBASE.PersianGulf.Shiraz_International_Airport</li>
@@ -11223,7 +11223,7 @@ Coordinates are dependent on the position of the maps origin.</p>
 <ul>
     <li>AIRBASE.PersianGulf.Abu_Dhabi_International_Airport</li>
     <li>AIRBASE.PersianGulf.Abu_Musa_Island_Airport</li>
-    <li>AIRBASE.PersianGulf.Al-Bateen_Airport</li>
+    <li>AIRBASE.PersianGulf.Al_Bateen_Airport</li>
     <li>AIRBASE.PersianGulf.Al_Ain_International_Airport</li>
     <li>AIRBASE.PersianGulf.Al_Dhafra_AB</li>
     <li>AIRBASE.PersianGulf.Al_Maktoum_Intl</li>
@@ -11242,7 +11242,7 @@ Coordinates are dependent on the position of the maps origin.</p>
     <li>AIRBASE.PersianGulf.Lavan_Island_Airport</li>
     <li>AIRBASE.PersianGulf.Liwa_Airbase</li>
     <li>AIRBASE.PersianGulf.Qeshm_Island</li>
-    <li>AIRBASE.PersianGulf.Ras_Al_Khaimah_International_Airport</li>
+    <li>AIRBASE.PersianGulf.Ras_Al_Khaimah</li>
     <li>AIRBASE.PersianGulf.Sas_Al_Nakheel_Airport</li>
     <li>AIRBASE.PersianGulf.Sharjah_Intl</li>
     <li>AIRBASE.PersianGulf.Shiraz_International_Airport</li>
@@ -12245,7 +12245,7 @@ If the Identifiable is alive, true is returned.  </p>
 <ul>
     <li>AIRBASE.PersianGulf.Abu_Dhabi_International_Airport</li>
     <li>AIRBASE.PersianGulf.Abu_Musa_Island_Airport</li>
-    <li>AIRBASE.PersianGulf.Al-Bateen_Airport</li>
+    <li>AIRBASE.PersianGulf.Al_Bateen_Airport</li>
     <li>AIRBASE.PersianGulf.Al_Ain_International_Airport</li>
     <li>AIRBASE.PersianGulf.Al_Dhafra_AB</li>
     <li>AIRBASE.PersianGulf.Al_Maktoum_Intl</li>
@@ -12264,7 +12264,7 @@ If the Identifiable is alive, true is returned.  </p>
     <li>AIRBASE.PersianGulf.Lavan_Island_Airport</li>
     <li>AIRBASE.PersianGulf.Liwa_Airbase</li>
     <li>AIRBASE.PersianGulf.Qeshm_Island</li>
-    <li>AIRBASE.PersianGulf.Ras_Al_Khaimah_International_Airport</li>
+    <li>AIRBASE.PersianGulf.Ras_Al_Khaimah</li>
     <li>AIRBASE.PersianGulf.Sas_Al_Nakheel_Airport</li>
     <li>AIRBASE.PersianGulf.Sharjah_Intl</li>
     <li>AIRBASE.PersianGulf.Shiraz_International_Airport</li>
@@ -12902,7 +12902,7 @@ If the Identifiable is alive, true is returned.  </p>
 <ul>
     <li>AIRBASE.PersianGulf.Abu_Dhabi_International_Airport</li>
     <li>AIRBASE.PersianGulf.Abu_Musa_Island_Airport</li>
-    <li>AIRBASE.PersianGulf.Al-Bateen_Airport</li>
+    <li>AIRBASE.PersianGulf.Al_Bateen_Airport</li>
     <li>AIRBASE.PersianGulf.Al_Ain_International_Airport</li>
     <li>AIRBASE.PersianGulf.Al_Dhafra_AB</li>
     <li>AIRBASE.PersianGulf.Al_Maktoum_Intl</li>
@@ -12921,7 +12921,7 @@ If the Identifiable is alive, true is returned.  </p>
     <li>AIRBASE.PersianGulf.Lavan_Island_Airport</li>
     <li>AIRBASE.PersianGulf.Liwa_Airbase</li>
     <li>AIRBASE.PersianGulf.Qeshm_Island</li>
-    <li>AIRBASE.PersianGulf.Ras_Al_Khaimah_International_Airport</li>
+    <li>AIRBASE.PersianGulf.Ras_Al_Khaimah</li>
     <li>AIRBASE.PersianGulf.Sas_Al_Nakheel_Airport</li>
     <li>AIRBASE.PersianGulf.Sharjah_Intl</li>
     <li>AIRBASE.PersianGulf.Shiraz_International_Airport</li>
