--- a/Documentation/Functional.Rat.html
+++ b/Documentation/Functional.Rat.html
@@ -17317,7 +17317,7 @@ Spawn_BE_KA50 = SPAWN:New( 'BE KA-50@RAMP-Ground Defense' )</code></pre></li>
           </div>
           <div class="w3-half">
               
-<p>(optional) is the name that will be given to the Group at runtime.</p>
+<p>is the name that will be given to the Group at runtime.</p>
 
           </div>
         </div>
