MOOSE generated documentation [skip ci]

--- a/Documentation/Functional.AICSAR.html
+++ b/Documentation/Functional.AICSAR.html
@@ -1892,6 +1892,7 @@
     <li>Dedicated MASH zone</li>
     <li>Some FSM functions to include in your mission scripts</li>
     <li>Limit number of available helos</li>
+    <li>SRS voice output via TTS or soundfiles</li>
 </ul>
 
 <hr/>
@@ -1902,8 +1903,8 @@
 
 <hr/>
 
-<h3>Author: <strong>applevangelist</strong></h3>
-<p>Last Update April 2022</p>
+<h3>Author: <strong>Applevangelist</strong></h3>
+<p>Last Update February 2022</p>
 
 <hr/>
 
@@ -1969,11 +1970,12 @@ pilots are around.</p>
        my_aicsar.rescuezoneradius -- landing zone around downed pilot. Defaults to 200m
        my_aicsar.autoonoff -- stop operations when human helicopter pilots are around. Defaults to true.
        my_aicsar.verbose -- text messages to own coalition about ongoing operations. Defaults to true.
-       my_aicsarlimithelos -- limit available number of helos going on mission (defaults to true)
+       my_aicsar.limithelos -- limit available number of helos going on mission (defaults to true)
        my_aicsar.helonumber -- number of helos available (default: 3)
+       my_aicsar.verbose -- boolean, set to `true`for message output on-screen
 </code></pre>
 
-<h2>Radio options</h2>
+<h2>Radio output options</h2>
 
 <p>Radio messages, soundfile names and (for SRS) lengths are defined in three enumerators, so you can customize, localize messages and soundfiles to your liking:</p>
 
@@ -1983,7 +1985,7 @@ pilots are around.</p>
          EN = {
          INITIALOK = "Roger, Pilot, we hear you. Stay where you are, a helo is on the way!",
          INITIALNOTOK = "Sorry, Pilot. You're behind maximum operational distance! Good Luck!",
-         PILOTDOWN = "Pilot down at ", -- note that this will be appended with the position
+         PILOTDOWN = "Mayday, mayday, mayday! Pilot down at ", -- note that this will be appended with the position in MGRS
          PILOTKIA = "Pilot KIA!",
          HELODOWN = "CSAR Helo Down!",
          PILOTRESCUED = "Pilot rescued!",
@@ -2022,8 +2024,32 @@ pilots are around.</p>
        }
 </code></pre>
 
+<h2>Radio output via SRS and Text-To-Speech (TTS)</h2>
+
+<p>Radio output can be done via SRS and Text-To-Speech. No extra sound files required! 
+<a href="https://github.com/FlightControl-Master/MOOSE_GUIDES/blob/master/documents/Moose%20TTS%20Setup%20Guide.pdf">Initially, Have a look at the guide on setting up SRS TTS for Moose</a>.
+The text from the <code>AICSAR.Messages</code> table above is converted on the fly to an .ogg-file, which is then played back via SRS on the selected frequency and mdulation.
+Hint - the small black window popping up shortly is visible in Single-Player only. </p>
+
+<p>To set up AICSAR for SRS TTS output, add e.g. the following to your script:</p>
+
+<pre><code>         -- setup for google TTS, radio 243 AM, SRS server port 5002 with a google standard-quality voice (google cloud account required)
+         my_aicsar:SetSRSTTSRadio(true,"C:\\Program Files\\DCS-SimpleRadio-Standalone",243,radio.modulation.AM,5002,MSRS.Voices.Google.Standard.en_US_Standard_D,"en-US","female","C:\\Program Files\\DCS-SimpleRadio-Standalone\\google.json")
+
+         -- alternatively for MS Desktop TTS (voices need to be installed locally first!)
+         my_aicsar:SetSRSTTSRadio(true,"C:\\Program Files\\DCS-SimpleRadio-Standalone",243,radio.modulation.AM,5002,MSRS.Voices.Microsoft.Hazel,"en-GB","female")
+
+         -- define a different voice for the downed pilot(s)
+         my_aicsar:SetPilotTTSVoice(MSRS.Voices.Google.Standard.en_AU_Standard_D,"en-AU","male")
+
+         -- define another voice for the operator
+         my_aicsar:SetOperatorTTSVoice(MSRS.Voices.Google.Standard.en_GB_Standard_A,"en-GB","female")
+</code></pre>
+
+<h2>Radio output via preproduced soundfiles</h2>
+
 <p>The easiest way to add a soundfile to your mission is to use the "Sound to..." trigger in the mission editor. This will effectively 
-save your sound file inside of the .miz mission file.</p>
+save your sound file inside of the .miz mission file. <a href="https://github.com/FlightControl-Master/MOOSE_SOUND/tree/master/AICSAR">Example soundfiles are located on github</a></p>
 
 <p>To customize or localize your texts and sounds, you can take e.g. the following approach to add a German language version:</p>
 
