--- a/Documentation/Ops.Airboss.html
+++ b/Documentation/Ops.Airboss.html
@@ -40170,6 +40170,9 @@ When moose is loading dynamically (for moose class development), tracing is swit
     
 
 
+    
+<p> Set section lead of player flight.</p>
+
 </div>
 
 </div>   
