MOOSE generated documentation [skip ci]

--- a/Documentation/Ops.Airwing.html
+++ b/Documentation/Ops.Airwing.html
@@ -10004,7 +10004,7 @@ Spawning on runways is not supported.</p>
           </div>
           <div class="w3-half">
               
-<p>If <code>true</code>, only assets that are in the warehouse stock/inventory are counted.</p>
+<p>If <code>true</code>, only assets that are in the warehouse stock/inventory are counted. If <code>false</code>, only assets that are NOT in stock (i.e. spawned) are counted. If <code>nil</code>, all assets are counted.</p>
 
           </div>
         </div>
@@ -10030,7 +10030,7 @@ Spawning on runways is not supported.</p>
           </div>
           <div class="w3-half">
               
-<p>(Optional) Count only assest that have a certain attribute(s), e.g. <code>WAREHOUSE.Attribute.AIR_BOMBER</code>.</p>
+<p>(Optional) Count only assest that have a certain attribute(s), e.g. <code>GROUP.Attribute.AIR_BOMBER</code>.</p>
 
           </div>
         </div>
