--- a/Documentation/Wrapper.Client.html
+++ b/Documentation/Wrapper.Client.html
@@ -6599,7 +6599,7 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
       </div>
       <div class="w3-half">
         
-
+<p>The DCS unit object.</p>
 
       </div>
     </div>
