--- a/Documentation/Core.Point.html
+++ b/Documentation/Core.Point.html
@@ -7033,7 +7033,7 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
           </div>
           <div class="w3-half">
               
-<p>The target COORDINATE.</p>
+<p>The target COORDINATE. Can also be a DCS#Vec3.</p>
 
           </div>
         </div>
@@ -20149,7 +20149,7 @@ When moose is loading dynamically (for moose class development), tracing is swit
           </div>
           <div class="w3-half">
               
-<p>The target COORDINATE.</p>
+<p>The target COORDINATE. Can also be a DCS#Vec3.</p>
 
           </div>
         </div>
