--- a/Documentation/Ops.Brigade.html
+++ b/Documentation/Ops.Brigade.html
@@ -7256,7 +7256,7 @@ The assets loaded back into the mission will be considered for AUFTRAG type miss
           </div>
           <div class="w3-half">
               
-<p>If <code>true</code>, only assets that are in the warehouse stock/inventory are counted.</p>
+<p>If <code>true</code>, only assets that are in the warehouse stock/inventory are counted. If <code>false</code>, only assets that are NOT in stock (i.e. spawned) are counted. If <code>nil</code>, all assets are counted.</p>
 
           </div>
         </div>
@@ -7282,7 +7282,7 @@ The assets loaded back into the mission will be considered for AUFTRAG type miss
           </div>
           <div class="w3-half">
               
-<p>(Optional) Count only assest that have a certain attribute(s), e.g. <code>WAREHOUSE.Attribute.AIR_BOMBER</code>.</p>
+<p>(Optional) Count only assest that have a certain attribute(s), e.g. <code>GROUP.Attribute.AIR_BOMBER</code>.</p>
 
           </div>
         </div>
