--- a/Documentation/Ops.Legion.html
+++ b/Documentation/Ops.Legion.html
@@ -5895,7 +5895,7 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
           </div>
           <div class="w3-half">
               
-<p>If <code>true</code>, only assets that are in the warehouse stock/inventory are counted.</p>
+<p>If <code>true</code>, only assets that are in the warehouse stock/inventory are counted. If <code>false</code>, only assets that are NOT in stock (i.e. spawned) are counted. If <code>nil</code>, all assets are counted.</p>
 
           </div>
         </div>
@@ -5921,7 +5921,7 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
           </div>
           <div class="w3-half">
               
-<p>(Optional) Count only assest that have a certain attribute(s), e.g. <code>WAREHOUSE.Attribute.AIR_BOMBER</code>.</p>
+<p>(Optional) Count only assest that have a certain attribute(s), e.g. <code>GROUP.Attribute.AIR_BOMBER</code>.</p>
 
           </div>
         </div>
