--- a/Documentation/Wrapper.Unit.html
+++ b/Documentation/Wrapper.Unit.html
@@ -5088,7 +5088,7 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
       </div>
       <div class="w3-half">
         
-
+<p>The DCS unit object.</p>
 
       </div>
     </div>
