MOOSE generated documentation [skip ci]

--- a/Documentation/Core.Zone.html
+++ b/Documentation/Core.Zone.html
@@ -3616,7 +3616,7 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
             <th class="w3-half w3-left-align w3-container w3-padding-16">Description</th>
           </tr>
           <tr class="w3-border">
-            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(ZONE_ELASTIC).AddSetGroup">ZONE_ELASTIC:AddSetGroup(SetGroup, GroupSet)</a></p></td>
+            <td class="name w3-half w3-container" style="word-wrap: break-word"><p><a href="##(ZONE_ELASTIC).AddSetGroup">ZONE_ELASTIC:AddSetGroup(GroupSet)</a></p></td>
             <td class="summary w3-half w3-container" style="word-wrap: break-word">
 <p>Add a set of groups.</p>
 </td>
@@ -11750,7 +11750,7 @@ When moose is loading dynamically (for moose class development), tracing is swit
         <div class="w3-card-2 w3-padding-small w3-margin-top">
 
 <div class="w3-theme-l2">
-<h2><a id="#(ZONE_ELASTIC).AddSetGroup" ><strong>ZONE_ELASTIC:AddSetGroup(SetGroup, GroupSet)</strong></a></h2>
+<h2><a id="#(ZONE_ELASTIC).AddSetGroup" ><strong>ZONE_ELASTIC:AddSetGroup(GroupSet)</strong></a></h2>
 </div>
     
 <p>Add a set of groups.</p>
@@ -11764,28 +11764,18 @@ When moose is loading dynamically (for moose class development), tracing is swit
    <div class="w3-margin-left">
 <p>ZONE_ELASTIC</p>
 </div>
-    <h2><strong>Parameters:</strong></h2>
+    <h2><strong>Parameter:</strong></h2>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
                 <a href="Core.Set.html##(SET_GROUP)">Core.Set#SET_GROUP</a>
-            <strong><strong>SetGroup</strong></strong>
+            <strong><strong>GroupSet</strong></strong>
             </p>
           </div>
           <div class="w3-half">
               
 <p>Set of groups.</p>
 
-          </div>
-        </div>
-        <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
-          <div class="w3-half">
-            <p>
-            <strong><strong>GroupSet</strong></strong>
-            </p>
-          </div>
-          <div class="w3-half">
-              <p></p>
           </div>
         </div>
     <h2><strong>Return value:</strong></h2>
