--- a/Documentation/AI.AI_Escort_Request.html
+++ b/Documentation/AI.AI_Escort_Request.html
@@ -4896,7 +4896,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>YStart</strong></strong>
             </p>
           </div>
@@ -4922,7 +4922,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>ZStart</strong></strong>
             </p>
           </div>
@@ -5021,7 +5021,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>YStart</strong></strong>
             </p>
           </div>
@@ -5047,7 +5047,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>ZStart</strong></strong>
             </p>
           </div>
@@ -5120,7 +5120,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>YStart</strong></strong>
             </p>
           </div>
@@ -5133,7 +5133,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>ZStart</strong></strong>
             </p>
           </div>
@@ -5219,7 +5219,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>YStart</strong></strong>
             </p>
           </div>
@@ -5232,7 +5232,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>ZStart</strong></strong>
             </p>
           </div>
@@ -5305,7 +5305,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>YStart</strong></strong>
             </p>
           </div>
@@ -5318,7 +5318,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>ZStart</strong></strong>
             </p>
           </div>
@@ -5404,7 +5404,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>YStart</strong></strong>
             </p>
           </div>
@@ -5417,7 +5417,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>ZStart</strong></strong>
             </p>
           </div>
@@ -5503,7 +5503,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>YStart</strong></strong>
             </p>
           </div>
@@ -5589,7 +5589,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>YStart</strong></strong>
             </p>
           </div>
@@ -5662,7 +5662,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>YStart</strong></strong>
             </p>
           </div>
@@ -5688,7 +5688,7 @@ The flare will be fired from the first unit in the group.</p>
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>ZStart</strong></strong>
             </p>
           </div>
@@ -6194,7 +6194,7 @@ Note that if a report targets menu is not specified, no targets will be detected
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>YStart</strong></strong>
             </p>
           </div>
@@ -6220,7 +6220,7 @@ Note that if a report targets menu is not specified, no targets will be detected
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>ZStart</strong></strong>
             </p>
           </div>
@@ -6316,7 +6316,7 @@ Note that if a report targets menu is not specified, no targets will be detected
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>YStart</strong></strong>
             </p>
           </div>
@@ -6342,7 +6342,7 @@ Note that if a report targets menu is not specified, no targets will be detected
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>ZStart</strong></strong>
             </p>
           </div>
@@ -7350,7 +7350,7 @@ EscortPlanes = AI_ESCORT:New( EscortUnit, EscortGroup, "Desert", "Welcome to the
         <div class="w3-row w3-margin-left w3-border-bottom w3-border-l2">
           <div class="w3-half">
             <p>
-                <a href="##(nubmer)">#nubmer</a>
+                #number
             <strong><strong>YStart</strong></strong>
             </p>
           </div>
