MOOSE generated documentation [skip ci]

--- a/Documentation/Wrapper.Airbase.html
+++ b/Documentation/Wrapper.Airbase.html
@@ -2560,8 +2560,8 @@ is implemented in the AIRBASE class as <a href="##(AIRBASE).GetName">AIRBASE.Get
     <li>AIRBASE.Syria.H3_Northwest</li>
     <li>AIRBASE.Syria.H3_Southwest</li>
     <li>AIRBASE.Syria.Kharab_Ishk</li>
-    <li>AIRBASE.Syria.Raj_al_Issa_East</li>
-    <li>AIRBASE.Syria.Raj_al_Issa_West</li>
+    <li>AIRBASE.Syria.Raj_al_Issa_East (deleted by ED)</li>
+    <li>AIRBASE.Syria.Raj_al_Issa_West (deleted by ED)</li>
     <li>AIRBASE.Syria.Ruwayshid</li>
     <li>AIRBASE.Syria.Sanliurfa</li>
     <li>AIRBASE.Syria.Tal_Siman</li>
@@ -4687,8 +4687,8 @@ When Moose is loaded statically, (as one file), tracing is switched off by defau
     <li>AIRBASE.Syria.H3_Northwest</li>
     <li>AIRBASE.Syria.H3_Southwest</li>
     <li>AIRBASE.Syria.Kharab_Ishk</li>
-    <li>AIRBASE.Syria.Raj_al_Issa_East</li>
-    <li>AIRBASE.Syria.Raj_al_Issa_West</li>
+    <li>AIRBASE.Syria.Raj_al_Issa_East (deleted by ED)</li>
+    <li>AIRBASE.Syria.Raj_al_Issa_West (deleted by ED)</li>
     <li>AIRBASE.Syria.Ruwayshid</li>
     <li>AIRBASE.Syria.Sanliurfa</li>
     <li>AIRBASE.Syria.Tal_Siman</li>
@@ -7473,8 +7473,8 @@ Note that this DOES NOT remove the airbase from the list. It just makes it unres
     <li>AIRBASE.Syria.H3_Northwest</li>
     <li>AIRBASE.Syria.H3_Southwest</li>
     <li>AIRBASE.Syria.Kharab_Ishk</li>
-    <li>AIRBASE.Syria.Raj_al_Issa_East</li>
-    <li>AIRBASE.Syria.Raj_al_Issa_West</li>
+    <li>AIRBASE.Syria.Raj_al_Issa_East (deleted by ED)</li>
+    <li>AIRBASE.Syria.Raj_al_Issa_West (deleted by ED)</li>
     <li>AIRBASE.Syria.Ruwayshid</li>
     <li>AIRBASE.Syria.Sanliurfa</li>
     <li>AIRBASE.Syria.Tal_Siman</li>
@@ -11969,8 +11969,8 @@ Coordinates are dependent on the position of the maps origin.</p>
     <li>AIRBASE.Syria.H3_Northwest</li>
     <li>AIRBASE.Syria.H3_Southwest</li>
     <li>AIRBASE.Syria.Kharab_Ishk</li>
-    <li>AIRBASE.Syria.Raj_al_Issa_East</li>
-    <li>AIRBASE.Syria.Raj_al_Issa_West</li>
+    <li>AIRBASE.Syria.Raj_al_Issa_East (deleted by ED)</li>
+    <li>AIRBASE.Syria.Raj_al_Issa_West (deleted by ED)</li>
     <li>AIRBASE.Syria.Ruwayshid</li>
     <li>AIRBASE.Syria.Sanliurfa</li>
     <li>AIRBASE.Syria.Tal_Siman</li>
@@ -13074,8 +13074,8 @@ If the Identifiable is alive, true is returned.  </p>
     <li>AIRBASE.Syria.H3_Northwest</li>
     <li>AIRBASE.Syria.H3_Southwest</li>
     <li>AIRBASE.Syria.Kharab_Ishk</li>
-    <li>AIRBASE.Syria.Raj_al_Issa_East</li>
-    <li>AIRBASE.Syria.Raj_al_Issa_West</li>
+    <li>AIRBASE.Syria.Raj_al_Issa_East (deleted by ED)</li>
+    <li>AIRBASE.Syria.Raj_al_Issa_West (deleted by ED)</li>
     <li>AIRBASE.Syria.Ruwayshid</li>
     <li>AIRBASE.Syria.Sanliurfa</li>
     <li>AIRBASE.Syria.Tal_Siman</li>
@@ -13814,8 +13814,8 @@ If the Identifiable is alive, true is returned.  </p>
     <li>AIRBASE.Syria.H3_Northwest</li>
     <li>AIRBASE.Syria.H3_Southwest</li>
     <li>AIRBASE.Syria.Kharab_Ishk</li>
-    <li>AIRBASE.Syria.Raj_al_Issa_East</li>
-    <li>AIRBASE.Syria.Raj_al_Issa_West</li>
+    <li>AIRBASE.Syria.Raj_al_Issa_East (deleted by ED)</li>
+    <li>AIRBASE.Syria.Raj_al_Issa_West (deleted by ED)</li>
     <li>AIRBASE.Syria.Ruwayshid</li>
     <li>AIRBASE.Syria.Sanliurfa</li>
     <li>AIRBASE.Syria.Tal_Siman</li>
